@@ -31,6 +31,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
+    jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
 
 bootRun {
